--- a/flexLayout/style.css
+++ b/flexLayout/style.css
@@ -5,7 +5,8 @@ body {
     margin: 0;
     overflow: auto;
     font-family: Roboto, sans-serif;
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
 }
 
 img {
@@ -17,6 +18,9 @@ button {
     border: none;
     border-radius: 8px;
     background: #eee;
+    padding: 5px;
+    margin: 5px;
+    font-weight: 600;
 }
 
 input {
@@ -26,16 +30,63 @@ input {
     width: 400px;
     margin-bottom: 16px;
 }
+
 .header {
-display: flex;
+    display: flex;
+    justify-content: space-between;
 }
 
 .content {
-display: flex;
-flex-direction: column;
-justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .footer {
     display: flex;
+    justify-content: space-between;
+    background-color: #eeee;
+}
+
+ul {
+    padding-inline-start: 0;
+}
+
+
+
+.left-links {
+    display: flex;
+    /* justify-content: start; */
+    gap: 10px;
+    list-style-type: none;
+    padding-inline-start: 15px;
+}
+
+.right-links {
+    display: flex;
+    /* justify-content: end; */
+    gap: 10px;
+    list-style-type: none;
+    padding-inline-end: 20px;
+}
+
+.input {
+    display: flex;
+    justify-content: center;
+}
+
+.justify-image {
+    display: flex;
+    justify-content: center;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
