--- a/flexLayout/style.css
+++ b/flexLayout/style.css
@@ -7,6 +7,7 @@ body {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    width: 100vw;
 }
 
 img {
@@ -34,6 +35,7 @@ input {
 .header {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .content {
@@ -41,12 +43,14 @@ input {
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    width: 100%;
 }
 
 .footer {
     display: flex;
     justify-content: space-between;
     background-color: #eeee;
+    width: 100%;
 }
 
 ul {
